--- a/templates/index.html
+++ b/templates/index.html
@@ -96,10 +96,14 @@
 		</div>
 		<div class="template_style">
 			<span class="layout_title">Template Style</span>
-			<ul>
-				<li><a class="btn_link" href="{% url 'home' %}" target="blank">White Version</a></li>
-				<li><a class="btn_link" href="{% url 'index-8' %}" target="blank">Black Version</a></li>
-			</ul>
+			<div class="radio_check">
+				<input type="checkbox" id="template_type" name="template" value="Yes">
+				<label class="bg_default text-left" for="template_type"><span class="white_color">Day</span><span class="secondary_color">Night</span></label>
+			</div>
+<!--			<ul>-->
+<!--				<li><a class="btn_link" href="{% url 'home' %}" target="blank">Day</a></li>-->
+<!--				<li><a class="btn_link" href="{% url 'index-8' %}" target="blank">Night</a></li>-->
+<!--			</ul>-->
 		</div>
 		<div class="box_bg_style">
 			<span class="layout_title">Background pattern</span>
@@ -156,7 +160,7 @@
 					  <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
 					  <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>	
 					  <li class="nav-item"><a class="nav-link" href="#testimonial">Testimonial</a></li>	
-<!--					  <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>	-->
+<!--					  <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>-->
 					  <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>	
 					</ul>
 				</div>		
@@ -735,7 +739,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12 col-lg-12">
-					<div class="copyright"><p><a href="https://www.sachinholla.in" target="_blank">Sachin Holla</a></p></div>
+					<div class="copyright"><p><a href="https://www.sachinholla.in" target="_blank">Made by Sachin Holla 2022.</a></p></div>
 				</div>
 			</div>
 		</div>
