portfolio section modified

--- a/templates/index.html
+++ b/templates/index.html
@@ -154,7 +154,7 @@
 					  <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
 					  <li class="nav-item"><a class="nav-link" href="#skill">Skill</a></li>
 					  <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
-					  <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>	
+					  <li class="nav-item"><a class="nav-link" href="#portfolio">Portfolio</a></li>
 					  <li class="nav-item"><a class="nav-link" href="#testimonial">Testimonial</a></li>	
 <!--					  <li class="nav-item"><a class="nav-link" href="#blog">Blog</a></li>-->
 					  <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>	
@@ -492,7 +492,7 @@
 											</a>
 										</div>
 									</div>
-									<div class="column mix mix_all development wordpress mb_30 col-md-4 col-lg-4">
+									<div class="column mix mix_all wordpress branding mb_30 col-md-4 col-lg-4">
 										<div class="default-portfolio-item">
 											<a href="{% static 'images/portfolio/07.jpg' %}" data-fancybox="gallery">
 												<img src="{% static 'images/portfolio/07.jpg' %}" alt="image" />
@@ -501,7 +501,7 @@
 													<div class="tag">
 														<ul>
 															<li>Embedded Development,</li>
-															<li>Web Development</li>
+															<li>Branding</li>
 														</ul>
 													</div>
 												</div>
