--- a/templates/index-8.html
+++ b/templates/index-8.html
@@ -488,7 +488,7 @@
 											</a>
 										</div>
 									</div>
-									<div class="column mix mix_all development wordpress mb_30 col-md-4 col-lg-4">
+									<div class="column mix mix_all wordpress branding mb_30 col-md-4 col-lg-4">
 										<div class="default-portfolio-item">
 											<a href="{% static 'images/portfolio/07.jpg' %}" data-fancybox="gallery">
 												<img src="{% static 'images/portfolio/07.jpg' %}" alt="image" />
@@ -497,7 +497,7 @@
 													<div class="tag">
 														<ul>
 															<li>Embedded Development,</li>
-															<li>Web Development</li>
+															<li>Branding</li>
 														</ul>
 													</div>
 												</div>
